# quant-harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml  research_log.md
configs/: backtest.yaml  risk_limits.yaml
registry/: factor_calendar.json
src/qh/: __init__.py  backtest.py  cli.py  evaluation.py  factors.py  io.py
tests/: test_cli_smoke.py
